Added day 5 blog

--- a/css/libs/myComponents/blogHome/_blogHome.scss
+++ b/css/libs/myComponents/blogHome/_blogHome.scss
@@ -89,6 +89,14 @@ body{
   }
 }
 
+.blog--yellow{
+  background: $yellow;
+
+  &:hover{
+    background: darken($yellow, 7%);
+  }
+}
+
 
 .red{
   background: $red;
