Fixed FOUT Problem

--- a/css/libs/components/typography/_typography.scss
+++ b/css/libs/components/typography/_typography.scss
@@ -12,6 +12,17 @@ $debugTypography: false;
 /* ==========================================================================
    Base Type
    ========================================================================== */
+
+.wf-loading body {
+  font-family: "droid-sans", Helvetica, Arial;
+  visibility: hidden;
+}
+
+.wf-active body{
+  visibility: visible;
+}
+
+
 html {
   font-size: 100%;
 }
