--- a/css/libs/components/_variables.scss
+++ b/css/libs/components/_variables.scss
@@ -15,23 +15,26 @@
 
 /* Colors */
 $black: #2B2B2B;
-$blue: #5290D2;
+$blue: #5290D2; // fsfds
 $lightBlue: #8ebaf4;
-$red: #EF3A2E;
+$red: #EF3A2E; // fdsfd
 $grey: #666;
 $lightGrey: #999;
 $spaceGrey: #272E38;
 $lightGreen: #B6F9B2;
 $green: #6DF465;
+$lightGreen: #D1EE50;
 $lightBrown: #EEEBE5;
 $orange: #F68865;
-$yellow: #E5C826;
+$yellow: #E5C826; //dfsdf
 $darkYellow: #D3A24E;
 $darkOrange: #FF4E45;
 $white: #FEFEFE;
 $lightYellow: #F2CD62;
 $lightPurple: #867E8D;
-$teal: #36CEC7;
+$teal: #36CEC7; // ffdsf
+$purple: #7A72E8;
+$pink: #FF667A;
 
 /* Border radius */
 $borderRadiusDefault: 6px;
